--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="homme">homme</string>
     <string name="add">Add</string>
     <string name="show_etudiants">Show Etudiants</string>
+    <string name="femme">femme</string>
 </resources>
